<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clase05</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_program">ProgramActivity</string>
    
    <string name="vivo_texto">Ahora en Vivo:</string>
    <string name="vivo_seguiente_texto">Vidas</string>
    <string name="vod_texto">VER VOD</string>
    <string name="proximo_texto">Próximo Programa: El Angelus</string>
    <string name="destacado_texto">DESTACADOS</string>

</resources>
