<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_activity"
    android:orientation="vertical" >

    
    
    <ScrollView
        android:id="@+id/scrolito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_activity" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/sample_10" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_launcher" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom_vivo"
                android:layout_marginTop="@dimen/margin_top_vivo"
                android:background="@drawable/background_vivo"
                android:padding="@dimen/padding_vivo" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vivo_texto"
                            android:textColor="@color/vivo_color" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vivo_seguiente_texto"
                            android:textColor="@color/vida_color" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/proximo_texto"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/siguiente_color" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:background="@drawable/btn_vod"
                    android:paddingBottom="@dimen/vod_padding_bottom"
                    android:paddingLeft="@dimen/vod_padding_left"
                    android:paddingRight="@dimen/vod_padding_right"
                    android:paddingTop="@dimen/vod_padding_top"
                    android:text="@string/vod_texto"
                    android:textColor="@color/vod_color" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/destacado_margin_bottom"
                android:background="@drawable/background_destacado"
                android:orientation="vertical"
                android:paddingBottom="@dimen/destacado_padding_bottom"
                android:paddingTop="@dimen/destacado_padding_top" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/destacado_texto"
                    android:textColor="@color/destacado_color" />

            </LinearLayout>

            <com.area51.grupo08.custom.ProgramGridview
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:verticalSpacing="2dp"
                android:numColumns="2" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>